<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/configuration_title" >
        <CheckBoxPreference
            android:key="hide_system_apps"
            android:defaultValue="true"
            android:summary="@string/configuration_system_apps_msg"
            android:title="@string/configuration_system_apps" />

        <ListPreference
            android:key="theme"
            android:defaultValue="0"
            android:entries="@array/themes"
            android:entryValues="@array/themes_values"
            android:title="@string/configuration_theme" />

        <ListPreference
            android:key="sdcard"
            android:defaultValue=""
            android:title="@string/configuration_sdcard" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/backup_title" >
        <CheckBoxPreference
            android:key="backup_check"
            android:summary="@string/backup_check_summary"
            android:title="@string/backup_check_title"
            android:defaultValue="false"/>

        <Preference
            android:key="backup_ignored"
            android:summary="@string/backup_ignored_apps_summary"
            android:title="@string/backup_ignored_apps_title" />

        <CheckBoxPreference
            android:key="backup_uninstalled"
            android:summary="@string/backup_uninstalled_apps_summary"
            android:title="@string/backup_uninstalled_apps_title"
            android:defaultValue="false"/>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/about_title" >
        <PreferenceScreen
            android:key="web"
            android:summary="@string/about_web_summary"
            android:title="@string/about_web_title" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/web_url" />
        </PreferenceScreen>

        <Preference
            android:key="mail"
            android:summary="@string/about_email_summary"
            android:title="@string/about_email_title" />

        <PreferenceScreen
            android:key="twitter"
            android:summary="@string/about_twitter_summary"
            android:title="@string/about_twitter_title" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/twitter_url" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="source"
            android:summary="@string/about_source_summary"
            android:title="@string/about_source_title" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/source_url" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="translate"
            android:summary="@string/about_translate_summary"
            android:title="@string/about_translate_title" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/translate_url" />
        </PreferenceScreen>
        <PreferenceScreen
                android:key="credits"
                android:summary="@string/about_credits_summary"
                android:title="@string/about_credits_title" >
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/credits_url" />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>