<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="?menuSearch"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/menu_refresh"
        android:icon="?menuRefresh"
        app:showAsAction="ifRoom"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_select_all"
        android:icon="?menuSelectAll"
        app:showAsAction="ifRoom"
        android:title="@string/menu_select_all"/>
    <item
        android:id="@+id/menu_save"
        android:icon="?menuSave"
        app:showAsAction="ifRoom"
        android:title="@string/menu_save"/>
    <item
        android:id="@+id/menu_share"        
        android:icon="?menuShare"
        app:showAsAction="ifRoom"
        android:title="@string/menu_share"/>
    <item
        android:id="@+id/menu_install"
        android:icon="?menuInstall"
        app:showAsAction="ifRoom"
        android:title="@string/menu_install"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="?menuDelete"
        app:showAsAction="ifRoom"
        android:title="@string/menu_delete"/>

</menu>