<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:icon="?menuRefresh"
        app:showAsAction="ifRoom"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_select_all"
        android:icon="?menuSelectAll"
        app:showAsAction="ifRoom"
        android:title="@string/menu_select_all"/>
    <item
        android:id="@+id/menu_load_file"
        android:icon="?menuUpload"
        app:showAsAction="ifRoom"
        android:title="@string/menu_load_file"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="?menuSettings"
        app:showAsAction="ifRoom"
        android:title="@string/menu_settings"/>

</menu>